--- a/Proj2AND.ipynb
+++ b/Proj2AND.ipynb
@@ -29,6 +29,7 @@
       "cell_type": "markdown",
       "source": [
         "# Trabalho II - Análise de Dados\n",
+        "### Por: Mariana Santos\n",
         "#### Este trabalho tem como objetivo aplicar os principais algoritmos de classificação e regressão estudados em sala de aula, utilizando bases de dados reais. A proposta visa consolidar o conhecimento técnico e metodológico em Machine Learning, por meio da implementação prática das técnicas, avaliação dos resultados e interpretação crítica das descobertas.\n",
         "\n",
         "# Base I - Desempenho Estudantil\n",
@@ -1815,10 +1816,10 @@
       "source": [
         "## Análises (REGRESSÃO)\n",
         "### Análise primária sem hiperparâmetros\n",
-        "#### O resultado do RMSE dos modelos no geral não foi horrível, com maior erro de 3.74 na árvore de regressão, que pode ser visualizado no gráfico acima, mas ainda surge a abertura para melhoria de alguns destes valores. Nesse momento, o menor erro foi o Linear Regression com apenas 1.81, como aponta o gráfico.\n",
+        "O resultado do RMSE dos modelos no geral não foi horrível, com maior erro de 3.74 na árvore de regressão, que pode ser visualizado no gráfico acima, mas ainda surge a abertura para melhoria de alguns destes valores. Nesse momento, o menor erro foi o Linear Regression com apenas 1.81, como aponta o gráfico.\n",
         "\n",
         "### Análise secundária com hiperparâmetros\n",
-        "#### Foi adicionado ou alterado alguns hiperparâmetros na árvore de regressão e obteve otimas melhorias, chegando próximo aos outros modelos, agora com RMSE de 2.59, já diminuiu bastante em comparação ao anterior. O que mudou foram os parâmetros max_depth e min_samples_leaf. Foi colocado o número 6 no max_depth, o que já tinha melhorado, mas com o número 5 de fato diminuiu mais um pouco o erro, sendo o escolhido para manter o resultado desta análise. Em relação ao SVR, não foi possível testar com o kernel='linear' ja que o treinamento ultrapassou 20min de execução, se tornando inviável. Mesmo com as alterações, o algoritmo Tree ainda foi pior em comparação aos demais, como pode ser visto no gráfico."
+        "Foi adicionado ou alterado alguns hiperparâmetros na árvore de regressão e obteve otimas melhorias, chegando próximo aos outros modelos, agora com RMSE de 2.59, já diminuiu bastante em comparação ao anterior. O que mudou foram os parâmetros max_depth e min_samples_leaf. Foi colocado o número 6 no max_depth, o que já tinha melhorado, mas com o número 5 de fato diminuiu mais um pouco o erro, sendo o escolhido para manter o resultado desta análise. Em relação ao SVR, não foi possível testar com o kernel='linear' ja que o treinamento ultrapassou 20min de execução, se tornando inviável. Mesmo com as alterações, o algoritmo Tree ainda foi pior em comparação aos demais, como pode ser visto no gráfico."
       ],
       "metadata": {
         "id": "8WZrzkr3VXtV"
